# docs

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  WRITING.md  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: docs-ci.yml  examples-py-tests.yml  sync-openapi.yml
docs/: build-with-ai-agents.mdx  cloud.mdx  concepts.mdx  docs.json  faq-cloud.md  features.mdx  index.md  index.mdx  lance.mdx  monitoring.mdx  namespaces.mdx  performance.mdx  quickstart.md  quickstart.mdx  tables-and-namespaces.mdx  troubleshooting.mdx  user-journey.mdx
docs/api/: migration.md
docs/api-reference/: index.mdx
docs/articles/: fine-tuning-embedding-models.md
docs/cloud/: get-started.mdx  index.md  index.mdx
docs/concepts/: architecture.md  datasets.md  index.md  search.md  storage.md  tables.md
docs/css/: custom.css
docs/datasets/: ade20k.mdx  chartqa.mdx  cifar10.mdx  coco-captions-2017.mdx  coco-detection-2017.mdx  docvqa.mdx  eurosat.mdx  fashion-mnist.mdx  fineweb-edu.mdx  flickr30k.mdx  food101.mdx  gqa-testdev-balanced.mdx  handwriting-ocr.mdx  hotpotqa-distractor.mdx  imagenet-1k-val.mdx  index.mdx  kitti-2d-detection.mdx  laion-1m.mdx  lerobot-pusht.mdx  lerobot-xvla-soft-fold.mdx  librispeech-clean.mdx  mnist.mdx  ms-marco-v2.1.mdx  ms-marco-v2.mdx  natural-questions-val.mdx  openvid.mdx  oxford-pets.mdx  pascal-voc-2012-segmentation.mdx  squad-v2.mdx  stanford-cars.mdx  textvqa.mdx  trivia-qa.mdx  vqav2.mdx
docs/demos/: index.mdx
docs/embedding/: index.mdx  quickstart.mdx
docs/enterprise/: architecture.md  architecture.mdx  authentication.mdx  benchmark.md  benchmarks.mdx  deployment.md  features.mdx  index.md  index.mdx  performance.mdx  quickstart.mdx  security.md  security.mdx
docs/faq/: faq-cloud.mdx  faq-enterprise.mdx  faq-oss.mdx  index.mdx
docs/geneva/: end-to-end.mdx  getting-started.mdx  index.mdx  reference.mdx  why-geneva.mdx
docs/get-started/: quickstart.mdx
docs/guides/: hybrid-search.md
docs/huggingface/: datasets.mdx  overview.mdx
docs/indexing/: fts-index.mdx  gpu-indexing.mdx  index.mdx  quantization.mdx  rabitq.mdx  reindexing.mdx  scalar-index.mdx  vector-index.mdx
docs/integrations/: index.mdx  lerobotdataset.mdx  stable-worldmodel.mdx
docs/lancedb/: index.md  quickstart-local.md  quickstart.md
docs/namespaces/: index.mdx  usage.mdx
docs/overview/: index.md  quickstart-local.md  quickstart.md
docs/production/: index.md
docs/quickstart/: basic_usage.mdx  index.mdx
docs/reranking/: cross_encoder.mdx  custom-reranker.mdx  eval.mdx  index.mdx  linear_combination.mdx  mrr-reranker.mdx  mrr.mdx  rrf.mdx
docs/research/: index.md
docs/search/: filtering.mdx  fts-examples.mdx  full-text-search.mdx  hybrid-search.mdx  index.mdx  mrr-reranker.mdx  multivector-search.mdx  optimize-queries.mdx  vector-search.mdx
docs/snippets/: ann_indexes.mdx  basic.mdx  basic_usage.mdx  build_with_ai_agents.mdx  connection.mdx  custom_embedding_function.mdx  embedding.mdx  filtering.mdx  full_text_search.mdx  geneva_dependency_verification.mdx  geneva_profiling_memory.mdx  geneva_scalar_udtfs.mdx  geneva_udfs_index.mdx  indexing.mdx  integrations.mdx  ivf_pq.mdx  merge_insert.mdx  multimodal.mdx  openai.mdx  quickstart.mdx  search.mdx  sentence-transformers.mdx  (+3 more)
examples/: extra.py  extra.rs  extra.ts  requirements.txt
overrides/: main.html
scripts/: hf_datasets.yaml  mdx_snippets_gen.py  sync_hf_datasets.py
tests/: camelot.json
tests/rs/: Cargo.toml  basic_usage.rs  connection.rs  embedding.rs  ivf_pq.rs  multimodal.rs  quickstart.rs  search.rs  simple.rs  tables.rs
(+261 files in other folders)
