[project]
name = "docs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "lancedb>=0.30.0",
    "pyarrow>=23.0.1",
    "lance-namespace>=0.6.1",
    "pandas>=3.0.1",
    "polars>=1.39.2",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "Pillow>=12.1.1",
    "geneva>=0.11.0",
]
