[project]
name = "docs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "lancedb>=0.34.0",
    "pyarrow>=23.0.1",
    "lance-namespace>=0.6.1",
    "pandas>=3.0.1",
    "polars>=1.39.2",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "Pillow>=12.1.1",
    "geneva>=0.13.0b15",
    "pyyaml>=6.0",
]

[tool.uv]
# fury.io hosts beta geneva / pylance / lancedb releases. unsafe-best-match
# mimics pip so stable releases still fall back to PyPI.
index-strategy = "unsafe-best-match"
prerelease = "allow"

[[tool.uv.index]]
name = "lancedb"
url = "https://pypi.fury.io/lancedb/"

[[tool.uv.index]]
name = "lance-format"
url = "https://pypi.fury.io/lance-format/"
