[package]
name = "rs"
version = "0.1.0"
edition = "2024"

[dependencies]
arrow-array = "56.2.0"
arrow-json = "56.2.0"
arrow-schema = "56.2.0"
futures = "0.3.31"
futures-util = "0.3.31"
lancedb = { version = "0.22.3", features = ["polars"] }
polars = ">=0.37,<0.40.0"
polars-arrow = ">=0.37,<0.40.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.145"
tempfile = "3.23.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[[example]]
name = "basic_usage"
path = "basic_usage.rs"

[[example]]
name = "connection"
path = "connection.rs"

[[example]]
name = "quickstart"
path = "quickstart.rs"
